cruzy-demo/force-app/main/default/objects/Booking__c/Booking__c.object-meta.xml
<CustomObject>
    <description>Represents a cruise quote or confirmed booking for a Cruzy customer.</description>
    <label>Booking</label>
    <nameField>
        <label>Booking Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bookings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>