cruzy-demo/force-app/main/default/objects/Booking__c/fields/Booking_Tag__c.field-meta.xml
<CustomField>
    <fullName>Booking_Tag__c</fullName>
    <label>Booking Tag</label>
    <length>50</length>
    <type>Text</type>
</CustomField>