cruzy-demo/force-app/main/default/objects/Booking__c/fields/Cabin_Category__c.field-meta.xml
<CustomField>
    <fullName>Cabin_Category__c</fullName>
    <label>Cabin Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Interior</fullName>
            </value>
            <value>
                <fullName>Ocean View</fullName>
            </value>
            <value>
                <fullName>Balcony</fullName>
            </value>
            <value>
                <fullName>Suite</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>