cruzy-demo/force-app/main/default/objects/Booking__c/fields/Cabin_Number__c.field-meta.xml
<CustomField>
    <fullName>Cabin_Number__c</fullName>
    <label>Cabin Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>