cruzy-demo/force-app/main/default/objects/Booking__c/fields/Cruise_Line__c.field-meta.xml
<CustomField>
    <fullName>Cruise_Line__c</fullName>
    <label>Cruise Line</label>
    <length>100</length>
    <type>Text</type>
</CustomField>