cruzy-demo/force-app/main/default/objects/Booking__c/fields/Cruise_Line_Co__c.field-meta.xml
<CustomField>
    <fullName>Cruise_Line_Co__c</fullName>
    <label>Cruise Line Co</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Carnival</fullName>
                <default>true</default>
                <label>Carnival</label>
            </value>
            <value>
                <fullName>Cunard</fullName>
            </value>
            <value>
                <fullName>Princess</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>