cruzy-demo/force-app/main/default/objects/Booking__c/fields/Cruise_Line_Cruise_Rate__c.field-meta.xml
<CustomField>
    <fullName>Cruise_Line_Cruise_Rate__c</fullName>
    <label>Cruise Line Cruise Rate</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>