cruzy-demo/force-app/main/default/objects/Booking__c/fields/Cruise_Line_Rate_Code__c.field-meta.xml
<CustomField>
    <fullName>Cruise_Line_Rate_Code__c</fullName>
    <label>Cruise Line Rate Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>123</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>