cruzy-demo/force-app/main/default/objects/Booking__c/fields/Cruise_Line_Total_Fare__c.field-meta.xml
<CustomField>
    <fullName>Cruise_Line_Total_Fare__c</fullName>
    <label>Cruise Line Total Fare</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>