cruzy-demo/force-app/main/default/objects/Booking__c/fields/Cruise_Name__c.field-meta.xml
<CustomField>
    <fullName>Cruise_Name__c</fullName>
    <label>Cruise Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>