cruzy-demo/force-app/main/default/objects/Booking__c/fields/Cruise_Total__c.field-meta.xml
<CustomField>
    <fullName>Cruise_Total__c</fullName>
    <label>Cruise Total</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>