cruzy-demo/force-app/main/default/objects/Booking__c/fields/Cruzy_Cruise_Rate__c.field-meta.xml
<CustomField>
    <fullName>Cruzy_Cruise_Rate__c</fullName>
    <label>Cruzy Cruise Rate</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>