cruzy-demo/force-app/main/default/objects/Booking__c/fields/Cruzy_Rate_Code__c.field-meta.xml
<CustomField>
    <fullName>Cruzy_Rate_Code__c</fullName>
    <label>Cruzy Rate Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>abc</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>