cruzy-demo/force-app/main/default/objects/Booking__c/fields/Cruzy_Total_Fare__c.field-meta.xml
<CustomField>
    <fullName>Cruzy_Total_Fare__c</fullName>
    <label>Cruzy Total Fare</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>