cruzy-demo/force-app/main/default/objects/Booking__c/fields/Current_Balance_Due__c.field-meta.xml
<CustomField>
    <fullName>Current_Balance_Due__c</fullName>
    <label>Current Balance Due</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>