cruzy-demo/force-app/main/default/objects/Booking__c/fields/Deck__c.field-meta.xml
<CustomField>
    <fullName>Deck__c</fullName>
    <label>Deck</label>
    <length>50</length>
    <type>Text</type>
</CustomField>