cruzy-demo/force-app/main/default/objects/Booking__c/fields/Departure_Port__c.field-meta.xml
<CustomField>
    <fullName>Departure_Port__c</fullName>
    <label>Departure Port</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Baltimore, MD</fullName>
            </value>
            <value>
                <fullName>Charleston, SC</fullName>
            </value>
            <value>
                <fullName>Galveston, TX</fullName>
            </value>
            <value>
                <fullName>Jacksonville, FL</fullName>
            </value>
            <value>
                <fullName>Miami, FL</fullName>
            </value>
            <value>
                <fullName>New Orleans, LA</fullName>
            </value>
            <value>
                <fullName>Norfolk, VA</fullName>
            </value>
            <value>
                <fullName>Port Canaveral, FL</fullName>
            </value>
            <value>
                <fullName>Tampa, FL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>