cruzy-demo/force-app/main/default/objects/Booking__c/fields/Dining_Time__c.field-meta.xml
<CustomField>
    <fullName>Dining_Time__c</fullName>
    <label>Dining Time</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Early Seating</fullName>
            </value>
            <value>
                <fullName>Late Seating</fullName>
            </value>
            <value>
                <fullName>Unassigned</fullName>
            </value>
            <value>
                <fullName>Your Time Dining</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>