cruzy-demo/force-app/main/default/objects/Booking__c/fields/Fare_Code__c.field-meta.xml
<CustomField>
    <fullName>Fare_Code__c</fullName>
    <label>Fare Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>