cruzy-demo/force-app/main/default/objects/Booking__c/fields/Itinerary__c.field-meta.xml
<CustomField>
    <fullName>Itinerary__c</fullName>
    <label>Itinerary</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Alaska</fullName>
            </value>
            <value>
                <fullName>Bahamas</fullName>
            </value>
            <value>
                <fullName>Bermuda</fullName>
            </value>
            <value>
                <fullName>Canada/New England</fullName>
            </value>
            <value>
                <fullName>Caribbean - Eastern</fullName>
            </value>
            <value>
                <fullName>Caribbean - Southern</fullName>
            </value>
            <value>
                <fullName>Caribbean - Western</fullName>
            </value>
            <value>
                <fullName>Europe</fullName>
            </value>
            <value>
                <fullName>Mexico</fullName>
            </value>
            <value>
                <fullName>Pacific Coast</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>