cruzy-demo/force-app/main/default/objects/Booking__c/fields/Mark_Up__c.field-meta.xml
<CustomField>
    <fullName>Mark_Up__c</fullName>
    <formula>Cruise_Total__c - Cruzy_Total_Fare__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mark-Up</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>