cruzy-demo/force-app/main/default/objects/Booking__c/fields/Mark_Up_Percent__c.field-meta.xml
<CustomField>
    <fullName>Mark_Up_Percent__c</fullName>
    <formula>1-(( Cruzy_Cruise_Rate__c +  Mark_Up__c )/ Cruise_Line_Cruise_Rate__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mark-Up %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>