cruzy-demo/force-app/main/default/objects/Booking__c/fields/Odysseus_Confirmation__c.field-meta.xml
<CustomField>
    <fullName>Odysseus_Confirmation__c</fullName>
    <label>Odysseus Confirmation</label>
    <length>50</length>
    <type>Text</type>
</CustomField>