cruzy-demo/force-app/main/default/objects/Booking__c/fields/Odysseus_Package_ID__c.field-meta.xml
<CustomField>
    <fullName>Odysseus_Package_ID__c</fullName>
    <label>Odysseus Package ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>