cruzy-demo/force-app/main/default/objects/Booking__c/fields/Odysseus_Status__c.field-meta.xml
<CustomField>
    <fullName>Odysseus_Status__c</fullName>
    <label>Odysseus Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>