cruzy-demo/force-app/main/default/objects/Booking__c/fields/Original_Cruise_Total__c.field-meta.xml
<CustomField>
    <fullName>Original_Cruise_Total__c</fullName>
    <label>Original Cruise Total</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>