cruzy-demo/force-app/main/default/objects/Booking__c/fields/PAX_Count__c.field-meta.xml
<CustomField>
    <fullName>PAX_Count__c</fullName>
    <label>PAX Count</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>