cruzy-demo/force-app/main/default/objects/Booking__c/fields/PCC__c.field-meta.xml
<CustomField>
    <fullName>PCC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Personal Cruise Counselor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>PCC_Bookings</relationshipName>
    <type>Lookup</type>
</CustomField>