cruzy-demo/force-app/main/default/objects/Booking__c/fields/Price_per_Person_per_Day__c.field-meta.xml
<CustomField>
    <fullName>Price_per_Person_per_Day__c</fullName>
    <formula>(Current_Balance_Due__c / PAX_Count__c )/ Duration_Nights__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Price per Person/Day</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>