cruzy-demo/force-app/main/default/objects/Booking__c/fields/Quote_Type__c.field-meta.xml
<CustomField>
    <fullName>Quote_Type__c</fullName>
    <label>Quote Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Reward</fullName>
            </value>
            <value>
                <fullName>Reward - Referral</fullName>
            </value>
            <value>
                <fullName>Member</fullName>
            </value>
            <value>
                <fullName>Cruzy+ Member</fullName>
            </value>
            <value>
                <fullName>B2C Direct</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>