cruzy-demo/force-app/main/default/objects/Booking__c/fields/Quoted_Deposit_Amt__c.field-meta.xml
<CustomField>
    <fullName>Quoted_Deposit_Amt__c</fullName>
    <label>Quoted Deposit Amt</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>