cruzy-demo/force-app/main/default/objects/Booking__c/fields/Return_Date__c.field-meta.xml
<CustomField>
    <fullName>Return_Date__c</fullName>
    <formula>Departure_Date__c + Duration_Nights__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Return Date</label>
    <type>Date</type>
</CustomField>