cruzy-demo/force-app/main/default/objects/Booking__c/fields/Reward__c.field-meta.xml
<CustomField>
    <fullName>Reward__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reward</label>
    <referenceTo>Reward__c</referenceTo>
    <relationshipLabel>Bookings</relationshipLabel>
    <relationshipName>Bookings</relationshipName>
    <type>Lookup</type>
</CustomField>