cruzy-demo/force-app/main/default/objects/Booking__c/fields/Savings__c.field-meta.xml
<CustomField>
    <fullName>Savings__c</fullName>
    <formula>Cruise_Line_Total_Fare__c - Cruise_Total__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Savings</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>