cruzy-demo/force-app/main/default/objects/Booking__c/fields/Ship__c.field-meta.xml
<CustomField>
    <fullName>Ship__c</fullName>
    <label>Ship</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Carnival Celebration</fullName>
            </value>
            <value>
                <fullName>Carnival Dream</fullName>
            </value>
            <value>
                <fullName>Carnival Elation</fullName>
            </value>
            <value>
                <fullName>Carnival Freedom</fullName>
            </value>
            <value>
                <fullName>Carnival Glory</fullName>
            </value>
            <value>
                <fullName>Carnival Horizon</fullName>
            </value>
            <value>
                <fullName>Carnival Jubilee</fullName>
            </value>
            <value>
                <fullName>Carnival Legend</fullName>
            </value>
            <value>
                <fullName>Carnival Liberty</fullName>
            </value>
            <value>
                <fullName>Carnival Magic</fullName>
            </value>
            <value>
                <fullName>Carnival Miracle</fullName>
            </value>
            <value>
                <fullName>Carnival Panorama</fullName>
            </value>
            <value>
                <fullName>Carnival Paradise</fullName>
            </value>
            <value>
                <fullName>Carnival Pride</fullName>
            </value>
            <value>
                <fullName>Carnival Radiance</fullName>
            </value>
            <value>
                <fullName>Carnival Spirit</fullName>
            </value>
            <value>
                <fullName>Carnival Splendor</fullName>
            </value>
            <value>
                <fullName>Carnival Sunrise</fullName>
            </value>
            <value>
                <fullName>Carnival Sunshine</fullName>
            </value>
            <value>
                <fullName>Carnival Venezia</fullName>
            </value>
            <value>
                <fullName>Carnival Vista</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>