cruzy-demo/force-app/main/default/objects/Booking__c/fields/Special_Considerations__c.field-meta.xml
<CustomField>
    <fullName>Special_Considerations__c</fullName>
    <description>Example:  Handicap, wheelchair, scooter, special diet...</description>
    <label>Special Considerations</label>
    <type>TextArea</type>
</CustomField>