cruzy-demo/force-app/main/default/objects/Booking__c/listViews/All_Bookings.listView-meta.xml
<ListView>
    <fullName>All_Bookings</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Status__c</columns>
    <columns>Departure_Date__c</columns>
    <columns>Departure_Port__c</columns>
    <columns>Ship__c</columns>
    <columns>PAX_Count__c</columns>
    <columns>Original_Cruise_Total__c</columns>
    <columns>Current_Balance_Due__c</columns>
    <columns>PCC__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Bookings</label>
</ListView>