cruzy-demo/force-app/main/default/objects/Booking__c/listViews/Confirmed_Bookings.listView-meta.xml
<ListView>
    <fullName>Confirmed_Bookings</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Departure_Date__c</columns>
    <columns>Departure_Port__c</columns>
    <columns>Ship__c</columns>
    <columns>Itinerary__c</columns>
    <columns>PAX_Count__c</columns>
    <columns>Original_Cruise_Total__c</columns>
    <columns>Current_Balance_Due__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Booking</value>
    </filters>
    <label>Confirmed Bookings</label>
    <language>en_US</language>
</ListView>