cruzy-demo/force-app/main/default/objects/Booking__c/listViews/My_Bookings.listView-meta.xml
<ListView>
    <fullName>My_Bookings</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Status__c</columns>
    <columns>Departure_Date__c</columns>
    <columns>Ship__c</columns>
    <columns>Original_Cruise_Total__c</columns>
    <columns>Current_Balance_Due__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Bookings</label>
    <language>en_US</language>
</ListView>