cruzy-demo/force-app/main/default/objects/Booking__c/listViews/Open_Balances.listView-meta.xml
<ListView>
    <fullName>Open_Balances</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Status__c</columns>
    <columns>Departure_Date__c</columns>
    <columns>Ship__c</columns>
    <columns>Original_Cruise_Total__c</columns>
    <columns>Current_Balance_Due__c</columns>
    <columns>PCC__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Current_Balance_Due__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </filters>
    <label>Open Balances</label>
    <language>en_US</language>
</ListView>